@@ -51,6 +51,7 @@ Changes in 1.9 (not yet released)
 --------------------------
 Changes in 1.8.2
 
+ - CGUIEditBox and the GUI-Editor now convert pasted text correctly using mbstowcs.
  - C::B project files work again on newer Linux-distributions which have cleaned up their dev-lib dependencies.
  - Makefile for the new IrrFontTool links now correctly to libfontconfig
 
